# biospecimen-disease-research-terminology

./: LICENSE  README.md  clinical_properties.csv  clinical_properties_summary.xlsx  clinical_vocabularies.csv  data_types.csv  metadata_properties.csv  namespaces.csv  pyproject.toml  resources.csv
scripts/: brt_mergetool  brttool
src/brttools/: convert.py
tools/: README.md
tools/scripts/: brttool
tools/src/brttools/: convert.py
